; ModuleID = '/home/carl/AnghaBench/libgit2/tests/transports/smart/extr_packet.c_test_transports_smart_packet__ack_pkt.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/transports/smart/extr_packet.c_test_transports_smart_packet__ack_pkt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [49 x i8] c"0030ACK 0000000000000000000000000000000000000000\00", align 1
@.str.1 = private unnamed_addr constant [41 x i8] c"0000000000000000000000000000000000000000\00", align 1
@.str.2 = private unnamed_addr constant [58 x i8] c"0039ACK 0000000000000000000000000000000000000000 continue\00", align 1
@GIT_ACK_CONTINUE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [56 x i8] c"0037ACK 0000000000000000000000000000000000000000 common\00", align 1
@GIT_ACK_COMMON = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [55 x i8] c"0037ACK 0000000000000000000000000000000000000000 ready\00", align 1
@GIT_ACK_READY = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [8 x i8] c"0007ACK\00", align 1
@.str.6 = private unnamed_addr constant [9 x i8] c"0008ACK \00", align 1
@.str.7 = private unnamed_addr constant [54 x i8] c"0036ACK00000000000000000x0000000000000000000000 ready\00", align 1
@.str.8 = private unnamed_addr constant [55 x i8] c"0037ACK 00000000000000000x0000000000000000000000 ready\00", align 1
@.str.9 = private unnamed_addr constant [54 x i8] c"0036ACK 000000000000000000000000000000000000000 ready\00", align 1
@.str.10 = private unnamed_addr constant [54 x i8] c"0036ACK 00000000000000000x0000000000000000000000ready\00", align 1
@.str.11 = private unnamed_addr constant [54 x i8] c"0036ACK 0000000000000000000000000000000000000000 read\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_transports_smart_packet__ack_pkt() #0 {
  %1 = call i32 @assert_ack_parses(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0), i32 0)
  %2 = load i32, i32* @GIT_ACK_CONTINUE, align 4
  %3 = call i32 @assert_ack_parses(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0), i32 %2)
  %4 = load i32, i32* @GIT_ACK_COMMON, align 4
  %5 = call i32 @assert_ack_parses(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0), i32 %4)
  %6 = load i32, i32* @GIT_ACK_READY, align 4
  %7 = call i32 @assert_ack_parses(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0), i32 %6)
  %8 = call i32 @assert_pkt_fails(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0))
  %9 = call i32 @assert_pkt_fails(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i64 0, i64 0))
  %10 = call i32 @assert_pkt_fails(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.7, i64 0, i64 0))
  %11 = call i32 @assert_pkt_fails(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.8, i64 0, i64 0))
  %12 = call i32 @assert_pkt_fails(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.9, i64 0, i64 0))
  %13 = call i32 @assert_pkt_fails(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.10, i64 0, i64 0))
  %14 = call i32 @assert_pkt_fails(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.11, i64 0, i64 0))
  ret void
}

declare dso_local i32 @assert_ack_parses(i8*, i8*, i32) #1

declare dso_local i32 @assert_pkt_fails(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
